# lab08

./: CMakeLists.txt  Dockerfile  README.md  dockfile.yml
.github/: workflows.yml
.github/workflows/: cmake-single-platform.yml
